<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/menu_dashboard_icon"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/search_icon"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_all_categories"
            android:icon="@drawable/menu_categories_icon"
            android:title="@string/all_categories" />
        <item
            android:id="@+id/nav_add_wish_list"
            android:icon="@drawable/menu_add_wish_list"
            android:title="@string/add_wish_list" />


    </group>


    <item android:title="Moj profil">

        <menu>

            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_login"
                    android:icon="@drawable/menu_login_icon"
                    android:title="@string/login" />
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/menu_profile_icon"
                    android:title="@string/profile" />
                <item
                    android:id="@+id/logout"
                    android:icon="@drawable/menu_logout_icon"
                    android:title="@string/logout" />


            </group>


        </menu>
    </item>

    <item android:title="Delite">

        <menu>

            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/menu_share_icon"
                    android:title="@string/share" />
                <item
                    android:id="@+id/nav_rate_us"
                    android:icon="@drawable/menu_rate_us_icon"
                    android:title="@string/rate_us" />



            </group>


        </menu>
    </item>




</menu>
