<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.AllCategories"
    android:background="@color/lightWhite">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">


            <ImageView
                android:id="@+id/back_pressed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:src="@drawable/general_back_icon" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:src="@drawable/search_icon" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Kategorije"
            android:textSize="30sp"
            android:fontFamily="@font/brandon_grotesque_black"
            android:padding="10dp"
            android:textAllCaps="true"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/card1"
                android:layout_margin="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Action"
                    android:textSize="30sp"
                    android:fontFamily="@font/brandon_grotesque_black"
                    android:textColor="@color/black"
                    android:padding="25dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expand_all"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:layout_alignParentBottom="true"/>



            </RelativeLayout>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/action_img"
                android:layout_marginTop="-5dp"
                android:layout_alignParentRight="true"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="20dp"
            android:background="@color/card2">
            
            <ImageView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:src="@drawable/love_img"
                android:layout_marginLeft="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Love"
                android:textSize="30sp"
                android:fontFamily="@font/brandon_grotesque_black"
                android:textColor="@color/black"
                android:layout_alignParentRight="true"
                android:padding="25dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expand_all"
                android:layout_alignParentRight="true"
                android:background="#00000000"
                android:padding="20dp"
                android:layout_alignParentBottom="true"/>





        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/card3"
                android:layout_margin="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/History"
                    android:textSize="30sp"
                    android:fontFamily="@font/brandon_grotesque_black"
                    android:textColor="@color/black"
                    android:padding="25dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expand_all"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:layout_alignParentBottom="true"/>



            </RelativeLayout>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/history_img"
                android:layout_marginTop="-5dp"
                android:layout_alignParentRight="true"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="20dp"
            android:background="@color/card4">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:src="@drawable/drama_img"
                android:layout_marginLeft="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Drama"
                android:textSize="30sp"
                android:fontFamily="@font/brandon_grotesque_black"
                android:textColor="@color/black"
                android:layout_alignParentRight="true"
                android:padding="25dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expand_all"
                android:layout_alignParentRight="true"
                android:background="#00000000"
                android:padding="20dp"
                android:layout_alignParentBottom="true"/>





        </RelativeLayout>


        





    </LinearLayout>


</ScrollView>